# CRISPR-search

./: .gitignore  README.md
analysis/: CMakeLists.txt  Pipfile  csablast.py  csadb.py  csadistribution.py  csahtmlgen.py  csanalysis.py  csanalysis_output.html  csasettings.py  csasimilar.py  csastatcalc.py  test_csablast.py  test_csacore.py  test_csadist.py  test_csahtml.py
analysis/test_dbs/: sources.txt
location/: CMakeLists.txt  rapidjson.cmake
location/src/: Crispr.cpp  Crispr.hpp  CsLocationSetupJsonParser.cpp  CsLocationSetupJsonParser.hpp  Genome.cpp  Genome.hpp  GenomeDecompression.cpp  GenomeDecompression.hpp  GenomeFilter.cpp  GenomeFilter.hpp  GenomeLocation.cpp  GenomeLocation.hpp  LocationDb.cpp  LocationDb.hpp  Record.cpp  Record.hpp  Region.cpp  Region.hpp  csl_constants.hpp  cslocation.hpp  main.cpp
location/test_data/: bugresult.json  locDecompInvalid.fa  locDecompSuccess.fa  result.json  sources.txt
location/test_src/: test_crispr.cpp  test_decompression.cpp  test_filter.cpp  test_genome.cpp  test_locationdb.cpp  test_main.cpp  test_record.cpp  test_region.cpp  test_setupjson.cpp
